<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_autotimer_start">Start auto-timer</string>
    <string name="accessibility_autotimer_stop">Stop auto-timer</string>
    <string name="accessibility_back_to_video_description">Back to normal video mode</string>
    <string name="accessibility_cancel_button">Cancel</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_cheetah_video_start">Start time lapse</string>
    <string name="accessibility_cheetah_video_stop">Stop time lapse</string>
    <string name="accessibility_close_social_share">Close social share</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_elapsed_recording_time_description">Recording time %1$s</string>
    <string name="accessibility_elapsed_time_during_video_recording">Time spent recording</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_record_speed_desc">Slow Motion %1$d/%2$dx speed</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_longshot_capture">Take quick video</string>
    <string name="accessibility_night_stop_button">Stop</string>
    <string name="accessibility_open_social_share">Open social share</string>
    <string name="accessibility_output_time_during_video_recording">Length of time lapse video</string>
    <string name="accessibility_processing_the_photo">Processing the photo</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_speed">Speed is %s</string>
    <string name="accessibility_take_catshark_photo_button">Take Night Sight in Camera</string>
    <string name="accessibility_take_catshark_portrait_button">Take Night Sight in Portrait</string>
    <string name="accessibility_take_lasagna_button">Take lasagna photo</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_timelapse_record_speed_desc">Time Lapse %dx speed</string>
    <string name="accessibility_unlock_to_camera">Unlock to Camera</string>
    <string name="accessibility_video_mode_desc">Normal Video Mode</string>
    <string name="accessibility_video_output_length_description">Output video length %1$s</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="ae_af_lock_label">Exposure and focus lock</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="af_desc">Focus options</string>
    <string name="af_off_far_acc_desc">Lock focus to far</string>
    <string name="af_off_far_desc">Far</string>
    <string name="af_off_infinity_acc_desc">Lock focus to infinity</string>
    <string name="af_off_infinity_desc">Infinity</string>
    <string name="af_off_near_acc_desc">Lock focus to near</string>
    <string name="af_off_near_desc">Near</string>
    <string name="af_on_acc_desc">Turn on autofocus</string>
    <string name="af_on_option_desc">Auto</string>
    <string name="af_option_chip">Swipe for focus options</string>
    <string name="af_option_desc">FOCUS</string>
    <string name="app_name">Camera</string>
    <string name="aspect_ratio_desc">RATIO</string>
    <string name="astro_auto_acc_desc">Astrophotography Auto</string>
    <string name="astro_auto_desc">Auto</string>
    <string name="astro_desc">ASTROPHOTOGRAPHY</string>
    <string name="astro_edu_image_content_description">Example photo of Astrophotography</string>
    <string name="astro_line_1">Place phone on a steady surface like a tripod or rock.</string>
    <string name="astro_line_2">The shutter will change from a moon to stars. Tap it.</string>
    <string name="astro_off_acc_desc">Astrophotography Off</string>
    <string name="astro_off_desc">Off</string>
    <string name="astro_option_desc">Astrophotography options</string>
    <string name="astro_photo_url">https://www.gstatic.com/aiux/gca/astro/astro_edu.jpg</string>
    <string name="astrophotography_edu_title">Astrophotography</string>
    <string name="autotimer_tutorial_body">Get in the shot and smile or make a funny face to get photos automatically. Tap the button to start.</string>
    <string name="autotimer_tutorial_title">Snap photos with a smile</string>
    <string name="bottom_center">Bottom-center</string>
    <string name="bottom_left">Bottom-left</string>
    <string name="bottom_right">Bottom-right</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="brightness_ev_announcement">Brightness is now %1$s</string>
    <string name="brightness_knob_accessibility_description">Brightness knob</string>
    <string name="brightness_knob_tooltip_description">Adjusts brightness</string>
    <string name="burst_description">Tap the burst button to show the best photos only</string>
    <string name="burst_name">Smartburst</string>
    <string name="cam_flash_auto">Auto</string>
    <string name="cam_flash_off">Off</string>
    <string name="cam_flash_on">On</string>
    <string name="camera_fallback_close_app">Close app</string>
    <string name="camera_id_back_desc">Switch to front camera</string>
    <string name="camera_id_front_desc">Switch to back camera</string>
    <string name="camera_issue_contact_message">Since restarting your phone didn’t help, the problem could be due to issues with your camera’s hardware or software</string>
    <string name="camera_issue_reboot_message">Since you’ve already restarted the Camera app, try turning your phone off and back on.</string>
    <string name="camera_issue_restart_message">Close and open the Camera app again.</string>
    <string name="camera_issue_title">Something went wrong</string>
    <string name="camera_menu_settings_label">@string/mode_settings</string>
    <string name="camera_permissions_error_title">Permissions needed</string>
    <string name="cancel_button">Cancel</string>
    <string name="cancel_button_description">Cancel</string>
    <string name="cancel_panorama">Discard Panorama</string>
    <string name="cancel_photo_sphere">Discard Photo Sphere</string>
    <string name="catshark_flash_disabled_chip">Flash is on. Night Sight turned off.</string>
    <string name="catshark_timer_disabled_chip">Timer is on. Night Sight turned off.</string>
    <string name="catshark_toggle_education_1">Turn Night Sight on/off</string>
    <string name="catshark_toggle_off_chip">Night Sight turned off.</string>
    <string name="catshark_toggle_off_desc">Turn Night Sight On</string>
    <string name="catshark_toggle_on_desc">Turn Night Sight Off</string>
    <string name="center">Center</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="cheetah_description">Record action that takes a long time – say, a sunset – in a video that plays back in a shorter time</string>
    <string name="cinematic_movements_description">"Slows down your phone's panning movements for professional-looking cinematic shots."</string>
    <string name="cinematic_movements_name">Cinematic Pan</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="complicationDrawable_noDataText">--</string>
    <string name="complicationDrawable_textTypeface">sans-serif-condensed</string>
    <string name="faceretouch_off_option_desc">Off</string>
    <string name="faceretouch_on_light_option_desc">Subtle</string>
    <string name="faceretouch_on_strong_option_desc">Smooth</string>
    <string name="retouching_edu_apply">Apply</string>
    <string name="retouching_edu_desc">Face retouching adjusts skin texture, under-eye tone, and eye brightness.</string>
    <string name="retouching_edu_disc">Captured on Pixel 5</string>
</resources>